--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section id="hero"></section>
     <section class="content">
        
-        <article class="search-engine-optimization">
+        <article class="article-properties">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="image search optimization"/>
             <h2>Search Engine Optimization</h2>
             <p>
@@ -35,14 +35,14 @@
             </p>
         </article>
      
-        <article class="search-engine-optimization">
+        <article class="article-properties">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="online reputation management" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </article>
-        <article class="search-engine-optimization">
+        <article class="article-properties">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -50,14 +50,14 @@
             </p>
         </article>
     </section>
-    <div class="benefits">
-        <div class="benefit-lead">
+    <section class="benefits">
+        <article>
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
+        </article>
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
@@ -72,7 +72,7 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </div>
+    </section>
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
