--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon Company Main Website</title>
+    <title>Horiseon Company providing Search Engine Optimization services</title>
 </head>
 
 <body>
@@ -28,6 +28,7 @@
 
     <main id="content">
         <article class="main-article-properties">
+            <a name="search-engine-optimization"></a>
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="image search optimization"/>
             <h2>Search Engine Optimization</h2>
             <p>
@@ -36,6 +37,7 @@
         </article>
      
         <article class="main-article-properties">
+            <a name="online-reputation-management"></a>
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="online reputation management" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -43,6 +45,7 @@
             </p>
         </article>
         <article class="main-article-properties">
+            <a name="social-media-marketing"></a>
             <img src="./assets/images/social-media-marketing.jpg" class="float-left"  alt="social media marketing image" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -51,7 +54,7 @@
         </article>
     </main>
     
-    <section class="benefits">
+    <aside class="benefits">
         <article>
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
@@ -73,7 +76,7 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </article>
-    </section>
+    </aside>
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
